# File-organizer

./: CHANGELOG.md  README.md  pyproject.toml
docs/: index.md  usage.md
src/: main.py
src/app/gui/: __init__.py  dialogs.py  main_window.py
src/app/gui/resources/: resources.qrc  resources_rc.py
src/app/logic/: __init__.py  organizer.py
src/app/models/: __init__.py  rule.py
src/app/threads/: __init__.py  organizer_thread.py  schedule_thread.py
src/app/utils/: __init__.py  settings.py  translations.py
tests/integration/: test_gui.py
tests/mocks/: __init__.py  mock_filesystem.py
tests/unit/: __init__.py  test_organizer.py
