[tool.poetry]
name = "file_organizer"
version = "0.2.0"
description = "A PyQt6-based File Organizer application with advanced features."
authors = ["File Organizer Team <contact@fileorganizer.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/yourusername/file-organizer"
packages = [
    { include = "file_organizer", from = "src" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Desktop Environment :: File Managers",
]

[tool.poetry.dependencies]
python = "^3.9"
PyQt6 = "^6.5.0"
schedule = "^1.1.0"
watchdog = "^2.3.0"
SQLAlchemy = "^1.4.0"

[tool.poetry.dev-dependencies]
pytest = "^7.0.0"
pytest-mock = "^3.6.0"
mypy = "^0.991"
black = "^23.3.0"
flake8 = "^4.0.0"
sphinx = "^4.0.0"
poetry = "^1.3.0"
pyinstaller = "^5.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
file-organizer = "file_organizer.main:main"
